fixed button in the navbar so its aligned with the images. need to fix jumbroton. progress.

--- a/pnz.css
+++ b/pnz.css
@@ -27,6 +27,6 @@ body {
    display:inline;
 }
 
-div.jumbotron {
+.jumbotron {
    display:center;
 }
